--- a/index.html
+++ b/index.html
@@ -12,31 +12,24 @@
     <link rel="stylesheet" href="css/section-video.css" />
     <link rel="stylesheet" href="css/customer.css" />
     <link rel="stylesheet" href="css/timeline.css" />
-    <title>Agency Minimal</title>
+    <title>Chaosmos</title>
   </head>
 
   <body>
-    <!-- Navbar -->
     <div class="main">
+      <!-- Navbar -->
       <nav>
         <div class="navbar container">
           <a href="#">
-            <img src="images/logo.svg" alt="logo" />
+            <img src="assets/images/logo-maif.jpg" alt="logo" />
           </a>
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
-              <a href="#" class="menu-item">Home</a>
-              <a href="#feature" class="menu-item">Features</a>
-              <a href="#detail" class="menu-item">Details</a>
-              <a href="#support" class="menu-item">Supports</a>
-              <a href="#about" class="menu-item">About us</a>
+              <a href="#" class="menu-item">Accueil</a>
+              <a href="#programme" class="menu-item">Programme</a>
+              <a href="event2025.html" class="btn-register btn-item">Événement de 2025</a>
+              <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
             </div>
-            <a href="event2025.html" class="btn-register btn-item" type="button">
-              Event 2025
-            </a>
-            <a href="equipe.html" class="btn-register btn-item" type="button">
-              L'équipe
-            </a>
           </div>
           <span onclick="toggleAction(this)" id="btn-action">
             <i class="fa-solid fa-bars"></i>
@@ -49,9 +42,9 @@
 
       <div class="main-content container">
         <div class="banner-content">
-          <h1>Venez découvrir le Chaosmos</h1>
-          <p>Sous-titre de la page d'accueil</p>
-          <div class="date">Le <b>samedi 15 Mai</b></div>
+          <h1>Venez découvrir le CHAOSMOS !</h1>
+          <p>Quand le chaos inspire, le cosmos s’exprime !</p>
+          <div class="date">Le <b>vendredi 3 avril</b></div>
           <div class="badge">
             <div class="badge-item">Exposition</div>
             <div class="badge-item">Cosmos</div>
@@ -66,55 +59,51 @@
     <div class="feature container" id="feature">
       <div class="title">
         <h5 class="title-quality">Émerveillez-vous</h5>
-        <h2 class="title-up-two">Explorez les Mystères de l'Univers</h2>
+        <h2 class="title-up-two">Embarquez pour le CHAOSMOS !</h2>
       </div>
       <div class="services">
         <div class="service">
           <div class="box_1 icon-box">
-            <img src="/images/art-design.png" alt="cosmos" />
+            <img src="assets/images/peinture.png" alt="cosmos" />
           </div>
-          <h4 class="subtitle-gras">Voyage Interstellaire</h4>
+          <h4 class="subtitle-gras">Expositions Évocatrices</h4>
           <p class="subtitle-regular">
-            Embarquez pour un voyage fascinant à travers les galaxies et les
-            étoiles.
+            Explorez nos œuvres qui célèbrent le chaos et l'harmonie de notre existence.
           </p>
         </div>
 
         <div class="service">
           <div class="box_2 icon-box">
-            <img src="/images/shape.png" alt="cosmos" />
+            <img src="assets/images/microphone.png" alt="cosmos" />
           </div>
           <div class="subtitle">
-            <h4 class="subtitle-gras">Ateliers Astronomiques</h4>
+            <h4 class="subtitle-gras">Conférences Inspirantes</h4>
             <p class="subtitle-regular">
-              Participez à des ateliers interactifs pour découvrir les secrets
-              de l'univers.
+              Assistez à des conférences sur les défis environnementaux et la beauté du vivant.
             </p>
           </div>
         </div>
 
         <div class="service">
           <div class="box_3 icon-box">
-            <img src="/images/pen.png" alt="cosmos" />
+            <img src="assets/images/planete-terre.png" alt="cosmos" />
           </div>
           <div class="subtitle">
-            <h4 class="subtitle-gras">Conférences Éclairantes</h4>
+            <h4 class="subtitle-gras">Exploration des Écosystèmes</h4>
             <p class="subtitle-regular">
-              Assistez à des conférences données par des experts en
-              astrophysique et cosmologie.
+              Découvrez les liens entre notre vie sur Terre et l'immensité du cosmos, tout en y mêlant du chaos.
             </p>
           </div>
         </div>
 
         <div class="service">
           <div class="box_4 icon-box">
-            <img src="/images/sports.png" alt="cosmos" />
+            <img src="assets/images/bulle-de-reflexion.png" alt="cosmos" />
           </div>
           <div class="subtitle">
-            <h4 class="subtitle-gras">Expositions Éblouissantes</h4>
+            <h4 class="subtitle-gras">Ateliers de Réflexion</h4>
             <p class="subtitle-regular">
-              Découvrez des expositions fascinantes sur les planètes, les
-              étoiles et au-delà.
+              Participez à des discussions sur l'avenir de notre habitat avec médiateurs et professionnels.
             </p>
           </div>
         </div>
@@ -127,28 +116,29 @@
           />
         </div>
         <div class="right">
-          <h2 class="title-boost">Venez Découvrir le Cosmos !</h2>
+          <h2 class="title-boost">Venez Explorer CHAOSMOS !</h2>
           <p class="subtitle-create">
-            Rejoignez-nous pour une aventure inoubliable au cœur de l'univers.
+            Rejoignez-nous pour une réflexion profonde sur la relation entre le cosmos et notre besoin urgent de mieux habiter notre planète.
           </p>
           <br />
           <div class="check">
             <div class="list">
               <i class="fa-solid fa-circle-check"></i>
-              <p>Des activités pour tous les passionnés d'astronomie.</p>
+              <p>Activités immersives sur les ciels nocturnes et les étoiles.</p>
             </div>
             <div class="list">
               <i class="fa-solid fa-circle-check"></i>
-              <p>Rencontres avec des astronomes et des passionnés.</p>
+              <p>Jeu d'orientation pour explorer l'exposition et la Terre.</p>
             </div>
             <div class="list">
               <i class="fa-solid fa-circle-check"></i>
-              <p>Une expérience immersive dans le monde des étoiles.</p>
+              <p>Rencontres avec des artistes sur la diversité de la vie.</p>
+            </div>
+            <div class="list">
+              <i class="fa-solid fa-circle-check"></i>
+              <p>Expérience éveillant la fragilité de notre existence.</p>
             </div>
           </div>
-          <a href="#" class="learn"
-            >En Savoir Plus <i class="fa-solid fa-arrow-right"></i
-          ></a>
         </div>
       </div>
     </div>
@@ -156,8 +146,7 @@
     <!-- Timeline -->
     <section id="support">
       <div class="txt1">
-        <p class="title1">Programme</p>
-        <h2>Comment se déroulera le Chaosmos ?</h2>
+        <h2 id="programme">Au programme</h2>
       </div>
 
       <section class="timeline-section">
@@ -167,23 +156,15 @@
             <div class="timeline-date">10h00</div>
             <div class="timeline-content">
               <h3>Ouverture des portes</h3>
-              <p>Accueil du public et présentation du programme de la journée.</p>
+              <p>Lancement de la journée avec une présentation générale de l'événement, des artistes et des activités à venir.</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">11h00</div>
+            <div class="timeline-date">10h30 - 12h00</div>
             <div class="timeline-content">
-              <h3>Conférence inaugurale</h3>
-              <p>Introduction aux mystères du cosmos par notre expert en astrophysique.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-date">12h30</div>
-            <div class="timeline-content">
-              <h3>Pause déjeuner</h3>
-              <p>Découvrez notre buffet spatial avec des surprises gastronomiques inspirées de l'espace.</p>
+              <h3>Jeu Surprise !</h3>
+              <p>Un défi interactif et amusant pour les participants ! Soyez prêts pour une expérience unique.</p>
               <a href="jeu.html" class="learn"
                 >En Savoir Plus <i class="fa-solid fa-arrow-right"></i
               ></a>
@@ -191,34 +172,26 @@
           </div>
           <div class="timeline-item">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">14h00</div>
+            <div class="timeline-date">12h00- 14h00</div>
             <div class="timeline-content">
-              <h3>Ateliers découverte</h3>
-              <p>Participez à des ateliers interactifs pour tous les âges : création de fusées, observation stellaire virtuelle.</p>
+              <h3>Visite Guidée avec une Médiatrice</h3>
+              <p>Plongez dans l'univers de l'exposition avec notre médiatrice. Une occasion d'en apprendre davantage sur les œuvres et leur contexte.</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">16h00</div>
+            <div class="timeline-date">14h00 - 16h30</div>
             <div class="timeline-content">
-              <h3>Exposition immersive</h3>
-              <p>Explorez notre exposition en réalité augmentée sur les planètes et les constellations.</p>
+              <h3>Visite Libre et Échanges avec les Artistes</h3>
+              <p>Profitez de cette période pour explorer l'exposition à votre rythme et échanger avec les artistes présents sur leurs créations et inspirations.</p>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-dot"></div>
-            <div class="timeline-date">18h00</div>
+            <div class="timeline-date">16h30 - 18h00</div>
             <div class="timeline-content">
-              <h3>Table ronde</h3>
-              <p>Discussion avec des scientifiques renommés sur les dernières découvertes astronomiques.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-date">20h00</div>
-            <div class="timeline-content">
-              <h3>Clôture</h3>
-              <p>Spectacle de lumières et cérémonie de clôture sous les étoiles.</p>
+              <h3>Dernières Visites et Clôture Officielle</h3>
+              <p>Dernière chance pour découvrir l'exposition avant la clôture officielle. Célébration de cette journée exceptionnelle et remerciements aux participants.</p>
             </div>
           </div>
         </div>
@@ -234,7 +207,7 @@
           <p class="titlepiedviolet">
             Contactez-nous pour plus d'informations
           </p>
-          <button id="buttonviolet">Contactez-nous</button>
+          <a href="equipe.html #contact"><button id="buttonviolet">Contactez-nous</button></a>
         </div>
         <div class="pied container">
           <div class="gauche">
@@ -242,17 +215,12 @@
             <p id="copy">&copy; Copyright 2025</p>
           </div>
           <div class="droite">
-            <a href="#">Home</a>
-            <a href="#">Adversite</a>
-            <a href="#">Supports</a>
-            <a href="#">Marketing</a>
-            <a href="#">FAQ</a>
+            <a href="#">Retour en haut</a>
           </div>
         </div>
       </div>
     </footer>
+
     <script src="js/scroll.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/popup.js"></script>
   </body>
 </html>
