--- a/jeu.html
+++ b/jeu.html
@@ -17,26 +17,16 @@
     <div class="main">
       <nav>
         <div class="navbar container">
-          <a href="index.html">
-            <img src="images/logo.svg" alt="logo" />
+          <a href="#">
+            <img src="assets/images/logo-maif.jpg" alt="logo" />
           </a>
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
-              <a href="index.html" class="menu-item">Home</a>
-              <a href="index.html#feature" class="menu-item">Features</a>
-              <a href="index.html#support" class="menu-item">Programme</a>
-              <a href="index.html#about" class="menu-item">About us</a>
+              <a href="index.html" class="menu-item">Accueil</a>
+              <a href="index.html #programme" class="menu-item">Programme</a>
+              <a href="event2025.html" class="btn-register btn-item">Événement de 2025</a>
+              <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
             </div>
-            <a
-              href="event2025.html"
-              class="btn-register btn-item"
-              type="button"
-            >
-              Event 2025
-            </a>
-            <a href="equipe.html" class="btn-register btn-item" type="button">
-              L'équipe
-            </a>
           </div>
           <span onclick="toggleAction(this)" id="btn-action">
             <i class="fa-solid fa-bars"></i>
@@ -62,10 +52,9 @@
         <div class="intro-content">
           <h2>Une aventure intellectuelle à travers le cosmos</h2>
           <p>
-            Découvrez notre jeu d'orientation exclusif qui vous mènera d'une
-            installation à l'autre tout en stimulant votre esprit et votre
-            curiosité. Chaque énigme résolue vous rapproche des mystères de
-            l'univers et de récompenses uniques !
+            Participez à notre jeu d'orientation exclusif qui vous emmènera d'une installation à l'autre. 
+            Stimulez votre esprit et votre curiosité en résolvant des énigmes qui vous rapprochent des 
+            ymystères de l'univers et de la complexité de la nature humaine, tout en vous offrant des surprises uniques !
           </p>
         </div>
       </div>
@@ -290,8 +279,10 @@
     <footer id="about">
       <div class="basfooter">
         <div class="piedviolet container">
-          <p class="titlepiedviolet">Contactez-nous pour plus d'informations</p>
-          <button id="buttonviolet">Contactez-nous</button>
+          <p class="titlepiedviolet">
+            Contactez-nous pour plus d'informations
+          </p>
+          <a href="equipe.html #contact"><button id="buttonviolet">Contactez-nous</button></a>
         </div>
         <div class="pied container">
           <div class="gauche">
@@ -299,11 +290,7 @@
             <p id="copy">&copy; Copyright 2025</p>
           </div>
           <div class="droite">
-            <a href="index.html">Home</a>
-            <a href="index.html#feature">Features</a>
-            <a href="index.html#support">Programme</a>
-            <a href="event2025.html">Event 2025</a>
-            <a href="equipe.html">L'équipe</a>
+            <a href="#">Retour en haut</a>
           </div>
         </div>
       </div>
