--- a/index.html
+++ b/index.html
@@ -145,11 +145,13 @@
 
     <!-- Timeline -->
     <section id="support">
-      <div class="txt1">
-        <h2 id="programme">Au programme</h2>
-      </div>
 
-      <section class="timeline-section">
+      
+      <section class="timeline-section container feature">
+        <div class="title">
+          <h2 id="title-up-two">Au programme</h2>
+        </div>
+        
         <div class="timeline-items">
           <div class="timeline-item">
             <div class="timeline-dot"></div>
