--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
       
       <section class="timeline-section container feature">
-        <div class="title">
-          <h2 id="title-up-two">Au programme</h2>
+        <div class="title txt1">
+          <h2 class="title-programme">Au programme</h2>
         </div>
         
         <div class="timeline-items">
