--- a/event2025.html
+++ b/event2025.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="fontawesome-free-6.2.0-web/css/all.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/navbar-banner.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/event2025.css" />
+    <link rel="stylesheet" href="../fontawesome-free-6.2.0-web/css/all.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/navbar-banner.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/event2025.css" />
     <title>Chaosmos - Événement 2025</title>
   </head>
 
@@ -18,7 +18,7 @@
       <nav>
         <div class="navbar container">
           <a href="#">
-            <img src="assets/images/logo-maif.jpg" alt="logo" />
+            <img src="../assets/images/logo-maif.jpg" alt="logo" />
           </a>
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
