fix all fr pages

--- a/fr/event2025.html
+++ b/fr/event2025.html
@@ -24,7 +24,9 @@
             <div class="nav-links">
               <a href="index.html" class="menu-item">Accueil</a>
               <a href="index.html #programme" class="menu-item">Programme</a>
-              <a href="event2025.html" class="btn-register btn-item">Événement de 2025</a>
+              <a href="event2025.html" class="btn-register btn-item"
+                >Événement de 2025</a
+              >
               <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
             </div>
           </div>
@@ -189,10 +191,10 @@
     <footer id="about">
       <div class="basfooter">
         <div class="piedviolet container">
-          <p class="titlepiedviolet">
-            Contactez-nous pour plus d'informations
-          </p>
-          <a href="equipe.html #contact"><button id="buttonviolet">Contactez-nous</button></a>
+          <p class="titlepiedviolet">Contactez-nous pour plus d'informations</p>
+          <a href="equipe.html #contact"
+            ><button id="buttonviolet">Contactez-nous</button></a
+          >
         </div>
         <div class="pied container">
           <div class="gauche">
@@ -206,8 +208,8 @@
       </div>
     </footer>
 
-    <script src="js/scroll.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/event2025.js"></script>
+    <script src="../js/scroll.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/event2025.js"></script>
   </body>
 </html>
