--- a/fr/index.html
+++ b/fr/index.html
@@ -21,7 +21,7 @@
       <nav>
         <div class="navbar container">
           <a href="#">
-            <img src="assets/images/logo-maif.jpg" alt="logo" />
+            <img src="../assets/images/logo-maif.jpg" alt="logo" />
           </a>
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
@@ -51,7 +51,7 @@
             <div class="badge-item">Tout public</div>
           </div>
         </div>
-        <img src="assets/images/cosmonaute.png" alt="cosmonaute" />
+        <img src="../assets/images/cosmonaute.png" alt="cosmonaute" />
       </div>
     </div>
 
@@ -64,7 +64,7 @@
       <div class="services">
         <div class="service">
           <div class="box_1 icon-box">
-            <img src="assets/images/peinture.png" alt="cosmos" />
+            <img src="../assets/images/peinture.png" alt="cosmos" />
           </div>
           <h4 class="subtitle-gras">Expositions Évocatrices</h4>
           <p class="subtitle-regular">
@@ -74,7 +74,7 @@
 
         <div class="service">
           <div class="box_2 icon-box">
-            <img src="assets/images/microphone.png" alt="cosmos" />
+            <img src="../assets/images/microphone.png" alt="cosmos" />
           </div>
           <div class="subtitle">
             <h4 class="subtitle-gras">Conférences Inspirantes</h4>
@@ -86,7 +86,7 @@
 
         <div class="service">
           <div class="box_3 icon-box">
-            <img src="assets/images/planete-terre.png" alt="cosmos" />
+            <img src="../assets/images/planete-terre.png" alt="cosmos" />
           </div>
           <div class="subtitle">
             <h4 class="subtitle-gras">Exploration des Écosystèmes</h4>
@@ -98,7 +98,7 @@
 
         <div class="service">
           <div class="box_4 icon-box">
-            <img src="assets/images/bulle-de-reflexion.png" alt="cosmos" />
+            <img src="../assets/images/bulle-de-reflexion.png" alt="cosmos" />
           </div>
           <div class="subtitle">
             <h4 class="subtitle-gras">Ateliers de Réflexion</h4>
@@ -111,7 +111,7 @@
       <div class="section-down">
         <div class="left">
           <img
-            src="assets/images/hall-villetaneuse.png"
+            src="../assets/images/hall-villetaneuse.png"
             alt="hall-villetaneuse"
           />
         </div>
@@ -149,7 +149,7 @@
       
       <section class="timeline-section container feature">
         <div class="title txt1">
-          <h2 class="title-programme">Au programme</h2>
+          <h2 id="programme" class="title-programme">Au programme</h2>
         </div>
         
         <div class="timeline-items">
@@ -167,9 +167,7 @@
             <div class="timeline-content">
               <h3>Jeu Surprise !</h3>
               <p>Un défi interactif et amusant pour les participants ! Soyez prêts pour une expérience unique.</p>
-              <a href="jeu.html" class="learn"
-                >En Savoir Plus <i class="fa-solid fa-arrow-right"></i
-              ></a>
+              <a href="jeu.html" style="color: #fff;">En Savoir Plus</a>
             </div>
           </div>
           <div class="timeline-item">
@@ -223,6 +221,6 @@
       </div>
     </footer>
 
-    <script src="js/scroll.js"></script>
+    <script src="../js/scroll.js"></script>
   </body>
 </html>
