--- a/fr/jeu.html
+++ b/fr/jeu.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="fontawesome-free-6.2.0-web/css/all.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/navbar-banner.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/jeu.css" />
+    <link rel="stylesheet" href="../fontawesome-free-6.2.0-web/css/all.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/navbar-banner.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/jeu.css" />
     <title>Chaosmos - Jeu d'Orientation Cosmique</title>
   </head>
 
@@ -18,13 +18,15 @@
       <nav>
         <div class="navbar container">
           <a href="#">
-            <img src="assets/images/logo-maif.jpg" alt="logo" />
+            <img src="../assets/images/logo-maif.jpg" alt="logo" />
           </a>
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
               <a href="index.html" class="menu-item">Accueil</a>
               <a href="index.html #programme" class="menu-item">Programme</a>
-              <a href="event2025.html" class="btn-register btn-item">Événement de 2025</a>
+              <a href="event2025.html" class="btn-register btn-item"
+                >Événement de 2025</a
+              >
               <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
             </div>
           </div>
@@ -52,9 +54,11 @@
         <div class="intro-content">
           <h2>Une aventure intellectuelle à travers le cosmos</h2>
           <p>
-            Participez à notre jeu d'orientation exclusif qui vous emmènera d'une installation à l'autre. 
-            Stimulez votre esprit et votre curiosité en résolvant des énigmes qui vous rapprochent des 
-            ymystères de l'univers et de la complexité de la nature humaine, tout en vous offrant des surprises uniques !
+            Participez à notre jeu d'orientation exclusif qui vous emmènera
+            d'une installation à l'autre. Stimulez votre esprit et votre
+            curiosité en résolvant des énigmes qui vous rapprochent des
+            ymystères de l'univers et de la complexité de la nature humaine,
+            tout en vous offrant des surprises uniques !
           </p>
         </div>
       </div>
@@ -279,10 +283,10 @@
     <footer id="about">
       <div class="basfooter">
         <div class="piedviolet container">
-          <p class="titlepiedviolet">
-            Contactez-nous pour plus d'informations
-          </p>
-          <a href="equipe.html #contact"><button id="buttonviolet">Contactez-nous</button></a>
+          <p class="titlepiedviolet">Contactez-nous pour plus d'informations</p>
+          <a href="equipe.html #contact"
+            ><button id="buttonviolet">Contactez-nous</button></a
+          >
         </div>
         <div class="pied container">
           <div class="gauche">
@@ -296,9 +300,9 @@
       </div>
     </footer>
 
-    <script src="js/scroll.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/popup.js"></script>
-    <script src="js/jeu.js"></script>
+    <script src="../js/scroll.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/popup.js"></script>
+    <script src="../js/jeu.js"></script>
   </body>
 </html>
