--- a/fr/index.html
+++ b/fr/index.html
@@ -29,6 +29,9 @@
               <a href="#programme" class="menu-item">Programme</a>
               <a href="event2025.html" class="btn-register btn-item">Événement de 2025</a>
               <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
+              <a href="../en/index.html" class="menu-item">
+                <img src="../assets/images/uk.svg" alt="English" style="width: 20px; height: auto;" />
+              </a>
             </div>
           </div>
           <span onclick="toggleAction(this)" id="btn-action">
@@ -43,7 +46,7 @@
       <div class="main-content container">
         <div class="banner-content">
           <h1>Venez découvrir le CHAOSMOS !</h1>
-          <p>Quand le chaos inspire, le cosmos s’exprime !</p>
+          <p>Quand le chaos inspire, le cosmos s'exprime !</p>
           <div class="date">Le <b>vendredi 3 avril</b></div>
           <div class="badge">
             <div class="badge-item">Exposition</div>
@@ -68,7 +71,7 @@
           </div>
           <h4 class="subtitle-gras">Expositions Évocatrices</h4>
           <p class="subtitle-regular">
-            Explorez nos œuvres qui célèbrent le chaos et l'harmonie de notre existence.
+            Explorez nos œuvres qui célèbrent le chaos et l'harmonie de notre existence.
           </p>
         </div>
 
