--- a/fr/event2025.html
+++ b/fr/event2025.html
@@ -28,6 +28,13 @@
                 >Événement de 2025</a
               >
               <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
+              <a href="../en/index.html" class="menu-item">
+                <img
+                  src="../assets/images/uk.svg"
+                  alt="English"
+                  style="width: 20px; height: auto"
+                />
+              </a>
             </div>
           </div>
           <span onclick="toggleAction(this)" id="btn-action">
