--- a/fr/equipe.html
+++ b/fr/equipe.html
@@ -17,7 +17,7 @@
     <div class="main">
       <nav>
         <div class="navbar container">
-          <a href="#">
+          <a href="index.html">
             <img src="../assets/images/logo-maif.jpg" alt="logo" />
           </a>
           <div id="nav-toggle" class="menu">
