--- a/fr/event2025.html
+++ b/fr/event2025.html
@@ -17,16 +17,14 @@
     <div class="main">
       <nav>
         <div class="navbar container">
-          <a href="#">
+          <a href="index.html">
             <img src="../assets/images/logo-maif.jpg" alt="logo" />
           </a>
           <div id="nav-toggle" class="menu">
             <div class="nav-links">
               <a href="index.html" class="menu-item">Accueil</a>
               <a href="index.html #programme" class="menu-item">Programme</a>
-              <a href="event2025.html" class="btn-register btn-item"
-                >Événement de 2025</a
-              >
+              <a href="event2025.html" class="btn-register btn-item">Événement de 2025</a>
               <a href="equipe.html" class="btn-register btn-item">L'équipe</a>
               <a href="../en/index.html" class="menu-item">
                 <img
@@ -75,7 +73,7 @@
         <div class="gallery-container">
           <div class="gallery-item fade-in">
             <img
-              src="https://images.unsplash.com/photo-1462331940025-496dfbfc7564?q=80&w=1000"
+              src="../assets/images/astronaute.jpg"
               alt="Cosmos Exposition 1"
             />
             <div class="gallery-caption">
@@ -89,7 +87,7 @@
 
           <div class="gallery-item fade-in">
             <img
-              src="https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=1000"
+              src="../assets/images/mont_blanc2.jpg"
               alt="Cosmos Exposition 2"
             />
             <div class="gallery-caption">
@@ -103,7 +101,7 @@
 
           <div class="gallery-item fade-in">
             <img
-              src="https://images.unsplash.com/photo-1465101162946-4377e57745c3?q=80&w=1000"
+              src="../assets/images/chaise2.jpg"
               alt="Cosmos Exposition 3"
             />
             <div class="gallery-caption">
@@ -117,7 +115,7 @@
 
           <div class="gallery-item fade-in">
             <img
-              src="https://images.unsplash.com/photo-1543722530-d2c3201371e7?q=80&w=1000"
+              src="../assets/images/peinture_ronde.jpg"
               alt="Cosmos Exposition 4"
             />
             <div class="gallery-caption">
@@ -128,7 +126,7 @@
 
           <div class="gallery-item fade-in">
             <img
-              src="https://images.unsplash.com/photo-1614728894747-a83421e2b9c9?q=80&w=1000"
+              src="../assets/images/montagne.jpg"
               alt="Cosmos Exposition 5"
             />
             <div class="gallery-caption">
@@ -139,7 +137,7 @@
 
           <div class="gallery-item fade-in">
             <img
-              src="https://images.unsplash.com/photo-1506703719100-a0b3fb7dff78?q=80&w=1000"
+              src="../assets/images/araignée.jpg"
               alt="Cosmos Exposition 6"
             />
             <div class="gallery-caption">
